--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -9,6 +9,7 @@
     	<td> <a href = <%= url.long_url %> ><%= url.long_url %></a></td>
     	<td> <a href = <%= url.short_url %> ><%= url.short_url %></a> </td>
     	<td> <%= link_to 'Show', url_path(url) %> </td>
+    	<td> <%= link_to "Shorten a Url!", new_url_path %> </td>
     </tr>   
 	<% end %>
 </table>
