--- a/app/views/urls/index.html.erb
+++ b/app/views/urls/index.html.erb
@@ -10,6 +10,7 @@
     	<td> <a href = <%= url.short_url %> ><%= url.short_url %></a> </td>
     	<td> <%= link_to 'Show', url_path(url) %> </td>
     	<td> <%= link_to "Shorten a Url!", new_url_path %> </td>
+    	<td><%= link_to 'Delete', url_path(url), method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>   
 	<% end %>
 </table>
